log
Fri 21 Apr 2023 04:02:27 AM UTC: 
 tests:  1|8
total_score: 0/70
dcd186b
Fri 21 Apr 2023 04:02:56 AM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:23: error: ‘lt’ undeclared (first use in this function)
   45 |     map->lower_than = lt;
      |                       ^~
treemap.c:45:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
190ca7a
Fri 21 Apr 2023 04:03:11 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a1b8ede
Fri 21 Apr 2023 04:07:08 AM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:27: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   59 |             return current->pair;
      |                    ~~~~~~~^~~~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:606:1: error: expected declaration or statement at end of input
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
57b7dae
